--- a/app/src/main/res/layout/begin.xml
+++ b/app/src/main/res/layout/begin.xml
@@ -10,7 +10,7 @@
         android:id="@+id/Bluetooth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="0dp"
